tests/negative/05_undefined_function.nova
// EXPECT-ERROR: "undefined"
fn main() -> i32 {
    return undefined_function();
}
